trying to fix a bug with link copying on mobile

--- a/src/App/components/elements/GetStarted/GetStarted.module.scss
+++ b/src/App/components/elements/GetStarted/GetStarted.module.scss
@@ -1,7 +1,7 @@
 @import "../../../../variables.scss";
 
 .bg {
-  background-image: url("../../../../../public/images/icon-brand-recognition.svg");
+  background-image: url("../../../../../public/images/bg-boost-mobile.svg");
   background-color: $primary-darkViolet;
   background-repeat: no-repeat;
   background-size: cover;
